--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -1,5 +1,6 @@
 {
     "Logging": {
+        "IncludeScopes": false,
         "LogLevel": {
             "Default": "Information",
             "Microsoft": "Warning",
@@ -8,6 +9,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "mysql": "server=localhost;port=3306;user=root;password=123456;database=greenbookstore"
+        "mysql": "server=localhost;port=3306;user=root;password=123456;database=greenbookstore;CharSet=utf8;"
     }
 }
